--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <!-- Font Family end -->
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
-    <title>React App</title>
+    <title>Eventy Event-Management</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
